--- a/messageCommon/pom.xml
+++ b/messageCommon/pom.xml
@@ -33,7 +33,11 @@
             <artifactId>netty-all</artifactId>
             <version>4.1.114.Final</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.18.0</version>
+        </dependency>
     </dependencies>
 
 </project>
